# aure

./: .env.example  .gitignore  README.md  aure_config.example.yaml  manifest.example.yaml  pyproject.toml
src/aure/: __init__.py  __main__.py  cli.py  config.py  llm.py  mcp_server.py  state.py
src/aure/database/: __init__.py  materials.py
src/aure/llm/: __init__.py  config.py  timeout.py
src/aure/llm/providers/: __init__.py  alcf.py  gemini.py  local.py  openai.py
src/aure/nodes/: __init__.py  analysis.py  evaluation.py  fitting.py  intake.py  modeling.py  prompts.py  refinement.py  routing.py
src/aure/tools/: __init__.py  data_tools.py  feature_tools.py
src/aure/web/: __init__.py  data.py  routes.py
src/aure/web/static/: style.css
src/aure/web/templates/: base.html  history.html  results.html
src/aure/workflow/: __init__.py  checkpoints.py  graph.py  runner.py  tracing.py
tests/: __init__.py  test_feature_extraction.py  test_workflow.py
validation/: __init__.py  batch_runner.py  cli.py  comparator.py  inventory.py  report.py
